# QtAndroidTools

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  mainpresenter.cpp  mainpresenter.h  mainview.cpp  mainview.h
lib/: CMakeLists.txt
lib/cryptopp/: CMakeLists.txt
lib/quazip/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.qml  mainmodel.cpp  mainmodel.h  mainpresenter.cpp  mainpresenter.h  mainview.cpp  mainview.h
